[metadata]
name = pecan_demo
version = 2021.11.5
description-file =
    README.rst
author = yh


[files]
packages =
    pecan_demo


[entry_points]
console_scripts =
    pecan-dbsync = pecan_demo.cli.dbsync:main

wsgi_scripts =
    pecan-api = pecan_demo.api.app:build_wsgi_app

[global]
setup-hooks =
    pbr.hooks.setup_hook


[bdist_wheel]
universal=1